--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto redes sociais</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="1style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    
+    <main>
+    <section id="telefone">
+
+    </section>
+    <section id="redes-sociais">
+
+    </section>
+
+    </main>
 </body>
 </html>
