--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <section id="telefone">
     <iframe src="home.html" id="frame" name="tela" frameborder="0"></iframe>
     </section>
-    
+
     <section id="redes-sociais">
-    <a href="#"><img src="../imagens/logo-home.jpg" alt=""></a>
+    <a href="index.html"><img src="../imagens/logo-home.jpg" alt=""></a>
     <br>
     <a href="#"><img src="../imagens/logo-youtube.jpg" alt=""></a>
     <br>
-    <a href="#"><img src="../imagens/logo-github.jpg" alt=""></a>
+    <a href="https://github.com/Arthur-Fernandes-6" target="_blank"><img src="../imagens/logo-github.jpg"  alt=""></a>
     <br>
-    <a href="#"><img src="../imagens/logo-instagram.jpg" alt=""></a>
+    <a href="https://www.instagram.com/arthur_fernandesrp/" target="_blank"><img src="../imagens/logo-instagram.jpg" alt=""></a>
     <br>
     <a href="#"><img src="../imagens/logo-twitter.jpg" alt=""></a>
     <br>
