--- a/git.html
+++ b/git.html
@@ -20,6 +20,6 @@
 </head>
 <body>
     <img src="../imagens/meu-git.png" alt="">
-    <a href="https://github.com/Arthur-Fernandes-6">ACESSE</a>
+    <a href=""></a>
 </body>
 </html>
